[gd_scene load_steps=6 format=2]

[ext_resource path="res://UIMain/ContextMenu/ContextMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://UIMain/MainTheme/Title.tres" type="StyleBox" id=2]
[ext_resource path="res://UIMain/SaveLoadMenu/SaveLoadMenu.gd" type="Script" id=3]
[ext_resource path="res://UIMain/Sounds/Click.wav" type="AudioStream" id=4]
[ext_resource path="res://UIMain/Sounds/Close.wav" type="AudioStream" id=5]

[node name="SaveLoadMenu" type="VBoxContainer"]
offset_right = 600.0
offset_bottom = 374.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
offset_right = 600.0
offset_bottom = 34.0
custom_styles/normal = ExtResource( 2 )
text = "SAVE_GAME"
align = 1

[node name="Game01" type="Button" parent="."]
offset_top = 30.0
offset_right = 600.0
offset_bottom = 68.1229
text = "FILE_BLANK"

[node name="Game02" type="Button" parent="."]
offset_top = 64.0
offset_right = 600.0
offset_bottom = 102.123
text = "FILE_BLANK"

[node name="Game03" type="Button" parent="."]
offset_top = 98.0
offset_right = 600.0
offset_bottom = 136.123
text = "FILE_BLANK"

[node name="Game04" type="Button" parent="."]
offset_top = 132.0
offset_right = 600.0
offset_bottom = 170.123
text = "FILE_BLANK"

[node name="Game05" type="Button" parent="."]
offset_top = 166.0
offset_right = 600.0
offset_bottom = 204.123
text = "FILE_BLANK"

[node name="Game06" type="Button" parent="."]
offset_top = 200.0
offset_right = 600.0
offset_bottom = 238.123
text = "FILE_BLANK"

[node name="Game07" type="Button" parent="."]
offset_top = 234.0
offset_right = 600.0
offset_bottom = 272.123
text = "FILE_BLANK"

[node name="Game08" type="Button" parent="."]
offset_top = 268.0
offset_right = 600.0
offset_bottom = 306.123
text = "FILE_BLANK"

[node name="Game09" type="Button" parent="."]
offset_top = 302.0
offset_right = 600.0
offset_bottom = 340.123
text = "FILE_BLANK"

[node name="Game10" type="Button" parent="."]
offset_top = 336.0
offset_right = 600.0
offset_bottom = 374.123
text = "FILE_BLANK"

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Cancel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="hide" from="." to="." method="_on_SaveLoadMenu_hide"]
[connection signal="pressed" from="Game01" to="." method="_on_Game1_pressed"]
[connection signal="pressed" from="Game02" to="." method="_on_Game2_pressed"]
[connection signal="pressed" from="Game03" to="." method="_on_Game3_pressed"]
[connection signal="pressed" from="Game04" to="." method="_on_Game4_pressed"]
[connection signal="pressed" from="Game05" to="." method="_on_Game5_pressed"]
[connection signal="pressed" from="Game06" to="." method="_on_Game6_pressed"]
[connection signal="pressed" from="Game07" to="." method="_on_Game7_pressed"]
[connection signal="pressed" from="Game08" to="." method="_on_Game8_pressed"]
[connection signal="pressed" from="Game09" to="." method="_on_Game9_pressed"]
[connection signal="pressed" from="Game10" to="." method="_on_Game10_pressed"]
